--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
     <script>
         const subreddits = [
+            "CringeTikToks",
+            "LinkedInLunatics",
             "oddlysatisfying",
             "mildlyinteresting",
             "dataisbeautiful",
@@ -60,12 +62,12 @@
             "LifeProTips",
             "todayilearned",
             "whatisthisthing",
-            "softwaregore",
+            "Damnthatsinteresting", 
             "programminghumor",
             "birdswitharms",
-            "blurrypicturesofcats",
-            "notmyjob",
-            "PerfectFit",
+            "interestingasfuck",
+            "Unexpected",
+            "malelivingspace",
             "youseeingthisshit",
             "NatureIsFuckingLit",
             "CozyPlaces",
